# elf-parser

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: clippy.yml  doc.yml
.github/workflows/: clippy.yml  doc.yml
kernel_elf_parser/: all.html  fn.app_stack_region.html  fn.auxv_vector.html  fn.elf_base_addr.html  fn.elf_entry.html  fn.elf_segments.html  fn.get_app_stack_region.html  fn.get_auxv_vector.html  fn.get_elf_base_addr.html  fn.get_elf_entry.html  fn.get_elf_segments.html  index.html  sidebar-items.js  struct.ELFSegment.html
kernel_elf_parser/arch/: fn.get_relocate_pairs.html  fn.relocate_pairs.html  index.html  sidebar-items.js  struct.RelocatePair.html
kernel_elf_parser/arch/x86_64/: fn.get_relocate_pairs.html  fn.relocate_pairs.html
kernel_elf_parser/auxv/: fn.auxv_vector.html  fn.get_auxv_vector.html
kernel_elf_parser/user_stack/: fn.app_stack_region.html  fn.get_app_stack_region.html
search.desc/kernel_elf_parser/: kernel_elf_parser-desc-0-.js
src/: auxv.rs  lib.rs  user_stack.rs
src/arch/: aarch64.rs  riscv.rs  x86_64.rs
src/kernel_elf_parser/: auxv.rs.html  lib.rs.html  user_stack.rs.html
src/kernel_elf_parser/arch/: mod.rs.html  x86_64.rs.html
tests/: test_dynamic.rs  test_static.rs
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
