[package]
name = "kernel-elf-parser"
version = "0.1.0"
edition = "2021"
authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
repository = "https://github.com/Starry-OS/elf-parser"
description = "An lightweight ELF parser that parses ELF files and converts them into information needed for kernel building"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["Starry", "ELF", "kernel", "no_std"]

[dependencies]
axerrno = "0.1"
page_table_entry = "0.4"
xmas-elf = "0.9.0"
memory_addr = "0.3"
log = "0.4.21"
cfg-if = "1.0"